--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
     "bignumber.js": "^9.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "soroban-client": "^0.7.2",
+    "react-router-dom": "^6.14.1",
+    "soroban-client": "^0.9.0",
     "stellar-wallets-kit": "github:Creit-Tech/Stellar-Wallets-Kit"
   }
 }
