--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "soroban-client": "^0.9.2",
+    "soroban-client": "0.10.1",
     "stellar-wallets-kit": "github:Creit-Tech/Stellar-Wallets-Kit"
   }
 }
