--- a/package.json
+++ b/package.json
@@ -98,12 +98,12 @@
   },
   "dependencies": {
     "@stellar/design-system": "^1.0.0-beta.12",
-    "@stellar/freighter-api": "^1.4.0",
+    "@stellar/freighter-api": "1.7.0",
     "bignumber.js": "^9.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "soroban-client": "0.11.2",
+    "soroban-client": "1.0.0-beta.2",
     "stellar-wallets-kit": "github:Creit-Tech/Stellar-Wallets-Kit"
   }
 }
